# rust-os-in-1000-lines

./: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  build.sh  debug.sh  deploy-docs.sh  deploy-tutorial.sh  linker.ld  run.sh  test.sh
.cargo/: config.toml
.github/workflows/: deploy.yml
docs/: 01_environment_setup.md  01_first_kernel.md  02_csr.md  02_registers.md  02_riscv_basics.md  03_serial_communication.md  03_uart_driver.md  03_uart_principle.md  04_error_recovery.md  04_panic_handler.md  05_exception_types.md  06_heap_management.md  06_memory_allocator.md  06_memory_protection.md  07_process_concept.md  08_address_translation.md  08_page_tables.md  08_paging.md  09_privilege_levels.md  09_syscall_interface.md  09_user_mode_switch.md  10_syscall_implementation.md  10_syscall_mechanism.md  10_user_interface.md  11_block_device.md  11_disk_driver.md  11_io_scheduling.md  12_fat_filesystem.md  13_command_parsing.md  DEPLOYMENT.md  README.md  SUMMARY.md  appendix_references.md  book.toml
docs/theme/: custom.css  custom.js
src/: lib.rs  main.rs
src/arch/: mod.rs  riscv.rs
src/common/: mod.rs  string.rs  types.rs
src/drivers/: disk.rs  mod.rs  uart.rs
src/fs/: fat.rs  mod.rs
src/kernel/: conclusion.rs  exception.rs  memory.rs  mod.rs  paging.rs  process.rs  syscall.rs  usermode.rs
src/user/: mod.rs  shell.rs
